# kuavo_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mapping.rviz  mid360_nav.yaml
config/nav_2d/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  mpc_local_planner_params.yaml  navfn_params.yaml  teb_local_planner_params.yaml
config/nav_2d_woosh/: costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_tunedWoosh.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params copy.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_tunedWoosh.yaml  velocity_smoother_woosh_params.yaml  velocity_smoother_woosh_straightwalk_params.yaml
launch/: loc_mid360.launch  localization_mid360.launch  mapping.launch  nav_run.launch
maps/: map.yaml
nav_lidar/: 0local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
rviz/: nav_global.rviz
scripts/: conv.py  global_localization.py  head.py  nav_run.sh  publish_initial_pose.py  save_map.sh  start_mapping.sh  transform_fusion.py  visual_downsample.py
