<?xml version="1.0"?>
<package format="2">
  <name>kuavo_slam</name>
  <version>1.0.0</version>
  <description>The slam entry management package for Kuavo robot, integrating localization and mapping.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>faster_lio</depend>
  <depend>pcl_ros</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>rviz</depend>

  <export>
  </export>
</package>

